--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task</title>
+    <title>Tasks-v2</title>
     <link
       rel="shortcut icon"
       href="./src/assets/logo.png"
